feat: enhance search functionality and UI improvements
- Added loading and error states in Search.vue and Tags.vue for better user feedback.
- Refactored search logic to include category filtering and improved search term highlighting.
- Updated the layout to display popular tags and recent posts dynamically based on fetched data.
- Implemented API calls to fetch posts and tags, replacing sample data with real data.
- Improved tag display with dynamic sizing based on post count and added a tag cloud feature.
- Enhanced the overall styling and responsiveness of the components using Tailwind CSS.
- Added path aliases in TypeScript configuration for easier imports.
- Updated Vite configuration to support path aliases for cleaner code structure.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://cdn.jsdelivr.net/gh/selfhst/icons@main/svg/azirevpn.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GrummansBlog - Vue 3 Blog</title>
+    <title>Grummans Blog</title>
     <meta name="description" content="A modern blog exploring technology, development, and digital innovation" />
   </head>
   <body>
